Qsampler - A LinuxSampler Qt GUI Interface
------------------------------------------

ChangeLog

CVS HEAD

* Crash fix on double-clicking on a empty instrument list.


0.1.4  2007-05-04 Almost another year has gone by.

* Channel button colors have changed: yellow for mute and
  cyan for solo is now the rule, but note that this color
  highlighting is only rendered on some widget styles.

* Master sampler volume slider/spinbox combo is now featured.

* Initial support for sampler channel FX sends, while saving
  the session state, only at code-level.

* Sampler channel setup dialog does not mandate for valid nor
  existing instrument file name.

* Revised error verbosity in general and on session load/save;
  hour-glass wait cursor is now displayed on session load/save;
  keyboard shortcuts changed on MIDI instruments view context;
  improved channel strip arrangement on session open/load;
  instrument map entry removal confirmation (as optional);
  corrected some tooltip text strings.

* Most top-level widgets were missing the normal-widget flag,
  which were causing some sticky size behavior while on some
  window managers.

* Added preliminary MIDI instrument mapping support; now
  with an instrument list widget and editing capabilities;
  MIDI instrumeent map program numbers are now displayed in
  the range 1-128, instead of the internal 0-127.

* GPL address update.


0.1.3   2006-06-01 Its been a long year isn't it?

* Changed deprecated copyright attribute to license,
  on qsampler.spec (RPM).

* Added configure support for x86_64 libraries (UNTESTED).

* Optional specification of alternate liblscp and libgig
  installation paths have been added to configure command
  arguments (--with-liblscp, --with-libgig).

* Whenever the listing of actual instrument names is not an
  option (e.g. due to lack of libgig support), the whole
  number of selectable instrument items is now being graciously
  increased from just the bare 8 (eight) right up through 100