@@ -1,8 +1,8 @@
 # Process this file with autoconf to produce a configure script.
-AC_INIT(Qsampler, 0.1.4.1, rncbc@rncbc.org, qsampler)
+AC_INIT(Qsampler, 0.1.4.2, rncbc@rncbc.org, qsampler)
 AC_CONFIG_SRCDIR(src/qsamplerMainForm.ui.h)
 AC_CONFIG_HEADERS(config.h)
-AC_CONFIG_FILES(Makefile qsampler.pro qsampler.spec)
+AC_CONFIG_FILES(Makefile qsampler.pro qsampler.spec qsampler.desktop)
 
 # Set default installation prefix.
 AC_PREFIX_DEFAULT(/usr/local)
