@@ -5,6 +5,10 @@ ChangeLog
 
 CVS HEAD
 
+* Application icon is now installed to ${prefix}/share/pixmaps;
+  application desktop entry file is now included in installation;
+  spec file (RPM) is now a bit more openSUSE compliant.
+
 * Crash fix on double-clicking on a empty instrument list.
 
 
